# FelixRobot

./: README.md
FelixServer/: README.md  package.json
FelixServer/public/: index.html
FelixServer/public/css/: estilos.css.map  styles.css
FelixServer/public/js/: script.js
FelixServer/server/: felix.js  index.js
FelixiAtros/: .gitignore  README.md  dumb_infinite_recorder.py  felix_adjuster.py  felix_brain.py  felix_constants.py  felix_core.py  felix_tests.py
FelixiAtros/iatros-v1.0/: configure  configure.README
FelixiAtros/iatros-v1.0/iatros/htr/offline/: CMakeLists.txt  README2  config.h.cmake  doxyfile.cmake
FelixiAtros/iatros-v1.0/iatros/htr/offline/src/: CMakeLists.txt  constants.h  nothing.c  pbmclean.cc  pbmclean.h  pgmRLSA.cc  pgmRLSA.h  pgmborde.c  pgmborde.h  pgmmedian.c  pgmmedian.h  pgmnormsize.c  pgmnormsize.h  pgmresta.cc  pgmresta.h  pgmskew.c  pgmskew.h  pgmslant.c  pgmslant.h  pgmslope.c  pgmslope.h  pgmsubstract.cc  pgmsubstract.h  pgmtextfea.c  pgmtextfea.h
FelixiAtros/iatros-v1.0/iatros/htr/offline/src/LineSegmentation/: mainSegLines.cc  segLinesClass.cc  segLinesClass.h
FelixiAtros/iatros-v1.0/iatros/htr/offline/src/data_sets/: libpbm.c  libpgm.c  libpgm.h  libprep.c  libprep.h  mfSetClass.cc  mfSetClass.h  pgmClass.cc  pgmClass.h
FelixiAtros/iatros-v1.0/iatros/htr/online/: CMakeLists.txt  version.h.cmake
FelixiAtros/iatros-v1.0/iatros/htr/online/scripts/: HTRfeatShow.sh  draw-online_UNIPEN.sh
FelixiAtros/iatros-v1.0/iatros/htr/online/src/: CMakeLists.txt  Makefile  extract.cc  features.cc  features.h  nothing.c  online.cc  online.h  read.cc  read.h  segment.cc
FelixiAtros/iatros-v1.0/iatros/offline/: version.h.cmake
FelixiAtros/iatros-v1.0/iatros/offline/scripts/: convert_atros_config.py
FelixiAtros/iatros-v1.0/iatros/offline/src/: CMakeLists.txt  gmm.c  grammar-tool.c  nothing.c  recog.c  recog_list.c
FelixiAtros/iatros-v1.0/iatros/speech/: CMakeLists.txt  config.h.cmake  doxyfile.cmake
FelixiAtros/iatros-v1.0/iatros/speech/cmake.modules/: FindFLEX.cmake
FelixiAtros/iatros-v1.0/iatros/speech/src/: CMakeLists.txt  nothing.c
FelixiAtros/iatros-v1.0/iatros/speech/src/online/: CMakeLists.txt  online.c
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/: CMakeLists.txt  acquisitor.c  acquisitor.h  libAudio.c  libAudio.h  preprocess.c
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/circularBuffer/: CMakeLists.txt  circularBuffer.c  circularBuffer.h
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/derivative/: CMakeLists.txt  derivative.c  derivative.h  get_deriv.c
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/emission/: get_emission_probs.c
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/extractCC/: CMakeLists.txt  extractCC.c
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/lda/: CMakeLists.txt  get_lda.c  lda.c  lda.h
FelixiAtros/iatros-v1.0/iatros/speech/src/prep/record/: CMakeLists.txt  record.c
FelixiAtros/iatros-v1.0/prhlt/: version.h.cmake
FelixiAtros/iatros-v1.0/prhlt/cmake.modules/: FindBISON.cmake  FindSRILM.cmake
FelixiAtros/iatros-v1.0/prhlt/src/: CMakeLists.txt  args-flex.c  args.c  args.h  constants.h  extended_vocab.c  extended_vocab.h  gzip.c  gzip.h  sigsegv.c  trace.h  utils.c  utils.h  vocab.c  vocab.h
FelixiAtros/noiseProfs/: noise.prof  noise2.prof
FelixiAtros/test/: 00README  conf.feat  felix.cnf
FelixiAtros/test/models/: felix.gr  felix.lx
